charts/cleanuparr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cleanuparr
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: cleanuparr
  template:
    metadata:
      labels:
        app: cleanuparr
    spec:
      containers:
      - name: cleanuparr
        resources:
          requests:
            cpu: 500m
            memory: 512Mi
          limits:
            memory: 512Mi
        # renovate: datasource=docker depName=ghcr.io/cleanuparr/cleanuparr
        image: ghcr.io/cleanuparr/cleanuparr:2.10.9
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 11011
        volumeMounts:
        - name: cleanuparr-config
          mountPath: /config
      volumes:
        - name: cleanuparr-config
          persistentVolumeClaim:
            claimName: cleanuparr-config-pvc
