charts/cleanuparr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cleanuparr
  labels:
    app: cleanuparr
    kubernetes.io/name: cleanuparr
spec:
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  sessionAffinity: None
  type: ClusterIP
  selector:
    app: cleanuparr
  ports:
  - name: http
    port: 80
    targetPort: 11011
    protocol: TCP
